[gd_scene load_steps=19 format=3 uid="uid://c5hgwo36j7xsb"]

[ext_resource type="Script" uid="uid://wxsdud2yutoq" path="res://character.gd" id="1_oolk3"]
[ext_resource type="Script" uid="uid://dr43vhwhddxud" path="res://StateMachine/state_machine.gd" id="2_pjt0s"]
[ext_resource type="Script" uid="uid://c8oonsycdaf3o" path="res://StateMachine/States/idle_state.gd" id="3_wa5vi"]
[ext_resource type="Script" uid="uid://hwmb0h1dit80" path="res://StateMachine/States/run_state.gd" id="4_wfnr8"]
[ext_resource type="Script" uid="uid://6nxuvivw0fi5" path="res://StateMachine/States/crouch_state.gd" id="5_px5sl"]
[ext_resource type="Script" uid="uid://c3wpfcnhkm13s" path="res://StateMachine/States/slide_state.gd" id="6_0qfo5"]
[ext_resource type="Script" uid="uid://dqmbw2qetaobi" path="res://StateMachine/States/wallrun_state.gd" id="7_wdpcj"]
[ext_resource type="Script" uid="uid://dsfduhkanhykt" path="res://StateMachine/States/jump_state.gd" id="7_yxww1"]
[ext_resource type="PackedScene" uid="uid://dicp1i6bjx46y" path="res://pause_menu.tscn" id="9_qi5as"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0rwas"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_glpr6"]

[sub_resource type="SphereShape3D" id="SphereShape3D_glpr6"]

[sub_resource type="Animation" id="Animation_pjt0s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.5, 0)]
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Camera3D:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Camera3D:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Camera3D:position:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Camera3D:rotation:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_glpr6"]
resource_name = "crouch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.25, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera3D:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.5, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_wdpcj"]
resource_name = "land"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.000961971, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.5, 0), Vector3(0, 0.4, 0), Vector3(0, 0.5, 0)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("Camera3D:rotation:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.00192394, -0.0108831, -0.1, -0.0470916, 0.000185884, 0.0716974, -2.66023e-05, 0, -0.223914, -0.00132122, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 0.5)
}

[sub_resource type="Animation" id="Animation_wfnr8"]
resource_name = "running"
length = 2.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -0.2, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0.2, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.5, -0.25, 0, 0.25, 0, 0.7, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0, 0.7, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera3D:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}

[sub_resource type="Animation" id="Animation_0qfo5"]
resource_name = "sliding"
length = 15.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.25, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.5, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wa5vi"]
_data = {
&"RESET": SubResource("Animation_pjt0s"),
&"crouch": SubResource("Animation_glpr6"),
&"land": SubResource("Animation_wdpcj"),
&"running": SubResource("Animation_wfnr8"),
&"sliding": SubResource("Animation_0qfo5")
}

[node name="Character" type="CharacterBody3D"]
script = ExtResource("1_oolk3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_0rwas")
debug_color = Color(0, 0.6, 0.701961, 1)

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
visible = false
mesh = SubResource("CapsuleMesh_glpr6")
skeleton = NodePath("../..")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0.5, 0)
fov = 100.0

[node name="ReflectionProbe" type="ReflectionProbe" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
visible = false
update_mode = 1
size = Vector3(100, 100, 100)
box_projection = true
enable_shadows = true

[node name="CameraMount" type="Node3D" parent="."]
visible = false

[node name="SpringArm3D" type="SpringArm3D" parent="CameraMount"]
visible = false

[node name="CrouchCheck" type="ShapeCast3D" parent="."]
shape = SubResource("SphereShape3D_glpr6")
target_position = Vector3(0, 0.525, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wa5vi")
}

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("2_pjt0s")
current_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("3_wa5vi")

[node name="RunState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("4_wfnr8")

[node name="CrouchState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("5_px5sl")

[node name="SlideState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_0qfo5")
max_speed = 12.0

[node name="WallrunState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("7_wdpcj")

[node name="JumpState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("7_yxww1")

[node name="PauseMenu" parent="." instance=ExtResource("9_qi5as")]
process_mode = 3
visible = false
